<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/categoryGeneral" >
        <CheckBoxPreference
            android:key="mostrarNotificacoes"
            android:summaryOff="@string/categoryGeneralNotificationSumaryOff"
            android:summaryOn="@string/categoryGeneralNotificationSumaryOn"
            android:switchTextOff="@string/categoryGeneralNotificationOff"
            android:switchTextOn="@string/categoryGeneralNotificationOn"
            android:title="@string/categoryGeneralNotification" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/categoryCalendar" >
        <CheckBoxPreference
            android:key="utilizaCalendario"
            android:summaryOff="@string/categoryCalendarSumaryOff"
            android:summaryOn="@string/categoryCalendarSumaryOn"
            android:switchTextOff="@string/categoryCalendarOff"
            android:switchTextOn="@string/categoryCalendarOn"
            android:title="@string/categoryCalendarTitle" />

        <ListPreference
            android:dependency="utilizaCalendario"
            android:entries="@array/listOptions"
            android:entryValues="@array/listValues"
            android:key="listpref"
            android:summary="@string/categoryCalendarOptionSumary"
            android:title="@string/categoryCalendarOption" />
    </PreferenceCategory>

</PreferenceScreen>