<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_historico"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_clearHistory"/>
    
    <item
        android:id="@+id/menu_action_new"
        android:enabled="true"
        android:icon="@drawable/ic_actionbar_new"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_add"
        android:visible="true"/>
    
    <item
        android:id="@+id/menu_action_backup"
        android:enabled="true"
        android:icon="@drawable/ic_actionbar_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_backup"
        android:visible="true"/>
    
    <item
        android:id="@+id/menu_action_share"
        android:enabled="true"
        android:icon="@drawable/ic_actionbar_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_shared"
        android:titleCondensed="Share"
        android:visible="true"/>
    
    <item
        android:id="@+id/menu_action_restore"
        android:enabled="true"
        android:showAsAction="never"
        android:title="@string/menu_restore"
        android:titleCondensed="Restore"
        android:visible="true"/>

</menu>